--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Beginning of header styling */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -45,11 +46,15 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+/* End of header styling */
 
+/* This gives all p tags a default text size */
 p {
     font-size: 16px;
 }
 
+/* This adds and styles an image in the background that
+   takes up the top of the page */
 .background {
     height: 800px;
     width: 100%;
@@ -59,6 +64,8 @@ p {
     background-position: center;
 }
 
+/* These classes are just to float elements in certain
+   ways, and the margins keep things looking nice */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +76,74 @@ p {
     margin-left: 25px;
 }
 
+/* This gives a general styling to the main tag */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* General main article styling */
+#search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+#online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+#social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+/* End of main article styling */
+
+/* These classes keep the images to the proper size */
+#search-engine-optimization img {
+    max-height: 200px;
+}
+
+#online-reputation-management img {
+    max-height: 200px;
+}
+
+#social-media-marketing img {
+    max-height: 200px;
+}
+/* End of image resizing */
+
+/* These classes style the titles of each article */
+#search-engine-optimization h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+#online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+#social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+/* End of article title styling */
+
+/* Gives general styling to the whole aside tag */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,6 +155,7 @@ p {
     background-color: #2589bd;
 }
 
+/* These classes style each article in the aside tag */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,6 +171,7 @@ p {
     color: #ffffff;
 }
 
+/* These classes add styling to the aside sub-titles */
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -116,6 +187,7 @@ p {
     text-align: center;
 }
 
+/* These classes add styling for the aside images */
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -133,61 +205,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* End of aside styling */
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* Footer styling */
 footer {
     padding: 30px;
     clear: both;
